--- a/setup.conf
+++ b/setup.conf
@@ -13,7 +13,7 @@ url = http://www.ikaaro.org
 description = A Content Management System built on Python & itools
 
 # Packages
-packages = "cms.skeleton.bare cms.skeleton.quickstart"
+packages = "skeleton.bare skeleton.quickstart"
 
 # Scripts
 scripts = "
