--- a/setup.conf
+++ b/setup.conf
@@ -13,7 +13,7 @@ url = http://www.ikaaro.org
 description = A Content Management System built on Python & itools
 
 # Packages
-packages = "forum tracker wiki skeleton.bare skeleton.quickstart"
+packages = "forum future tracker wiki skeleton.bare skeleton.quickstart"
 
 # Scripts
 scripts = "
