Remove "icms-make-package.py"

--- a/setup.conf
+++ b/setup.conf
@@ -13,13 +13,11 @@ url = http://www.ikaaro.org
 description = A Content Management System built on Python & itools
 
 # Packages
-packages = "forum future tracker wiki skeleton.bare skeleton.quickstart"
+packages = "forum future tracker wiki"
 
 # Scripts
-scripts = "
-  icms-init.py icms-make-package.py icms-restore.py
-  icms-start.py icms-start-server.py icms-start-spool.py icms-stop.py
-  icms-update.py icms-update-catalog.py"
+scripts = "icms-init.py icms-restore.py icms-start.py icms-start-server.py
+  icms-start-spool.py icms-stop.py icms-update.py icms-update-catalog.py"
 
 # Languages
 source_language = en
