Update the "setup.conf" file.

--- a/setup.conf
+++ b/setup.conf
@@ -10,7 +10,8 @@ license = GNU General Public License (GPL)
 
 # Details on the package
 url = http://www.ikaaro.org
-description = A Content Management System built on Python & itools
+title = "The ikaaro CMS"
+description = "A Content Management System built on Python & itools"
 
 # Packages
 packages = "forum future tracker wiki"
