Improve readibility of the "setup.conf" file.

--- a/setup.conf
+++ b/setup.conf
@@ -1,16 +1,14 @@
 # The name of the package
 name = ikaaro
 
-# The author details
-author_name = J. David Ibáñez
-author_email = jdavid@itaapy.com
-
-# The license
-license = GNU General Public License (GPL)
-
-# Details on the package
-url = http://www.ikaaro.org
+# Recommended metadata
 title = "The ikaaro CMS"
+url = "http://www.ikaaro.org/ikaaro"
+author_name = "J. David Ibáñez"
+author_email = "jdavid@itaapy.com"
+license = "GNU General Public License (GPL)"
+
+# Longer description
 description = "A Content Management System built on Python & itools"
 
 # Packages
