bug#143: Add skeleton of shop

--- a/setup.conf
+++ b/setup.conf
@@ -12,7 +12,7 @@ license = "GNU General Public License (GPL)"
 description = "A Content Management System built on Python & itools"
 
 # Packages
-packages = "forum future tracker wiki"
+packages = "forum future shop tracker wiki"
 
 # Scripts
 scripts = "icms-init.py icms-restore.py icms-start.py icms-start-server.py
