Schedule the Spanish translation.

--- a/setup.conf
+++ b/setup.conf
@@ -20,4 +20,4 @@ scripts = "icms-init.py icms-restore.py icms-start.py icms-start-server.py
 
 # Languages
 source_language = en
-target_languages = fr
+target_languages = fr es
