--- a/setup.conf
+++ b/setup.conf
@@ -3,7 +3,7 @@ name = ikaaro
 
 # Recommended metadata
 title = "The ikaaro CMS"
-url = "http://www.ikaaro.org/ikaaro"
+url = "http://www.hforge.org/ikaaro"
 author_name = "J. David Ibáñez"
 author_email = "jdavid@itaapy.com"
 license = "GNU General Public License (GPL)"
