scripts#548: Merge the icms-start scripts

--- a/setup.conf
+++ b/setup.conf
@@ -15,8 +15,8 @@ description = "A Content Management System built on Python & itools"
 packages = "forum future tracker wiki"
 
 # Scripts
-scripts = "icms-init.py icms-restore.py icms-start.py icms-start-server.py
-  icms-start-spool.py icms-stop.py icms-update.py icms-update-catalog.py"
+scripts = "icms-init.py icms-restore.py icms-start.py icms-stop.py
+  icms-update.py icms-update-catalog.py"
 
 # Languages
 source_language = en
