--- a/setup.conf
+++ b/setup.conf
@@ -15,8 +15,8 @@ description = "A Content Management System built on Python & itools"
 packages = "calendar forum future tracker wiki"
 
 # Scripts
-scripts = "icms-init.py icms-start.py icms-stop.py icms-update.py
-  icms-update-catalog.py"
+scripts = "icms-forget.py icms-init.py icms-start.py icms-stop.py
+  icms-update.py icms-update-catalog.py"
 
 # Languages
 source_language = en
