Rename "calendar" module to "agenda"

--- a/setup.conf
+++ b/setup.conf
@@ -12,7 +12,7 @@ license = "GNU General Public License (GPL)"
 description = "A Content Management System built on Python & itools"
 
 # Packages
-packages = "blog calendar obsolete"
+packages = "blog agenda obsolete"
 
 # Scripts
 scripts = "icms-forget.py icms-init.py icms-start.py icms-stop.py
