--- a/setup.conf
+++ b/setup.conf
@@ -5,7 +5,7 @@ name = ikaaro
 title = "The ikaaro CMS"
 url = "http://www.hforge.org/ikaaro"
 author_name = "J. David Ibáñez"
-author_email = "jdavid@itaapy.com"
+author_email = "jdavid.ibp@gmail.com"
 license = "GNU General Public License (GPL)"
 
 # Longer description
