--- a/setup.conf
+++ b/setup.conf
@@ -20,4 +20,4 @@ scripts = "icms-forget.py icms-init.py icms-start.py icms-stop.py
 
 # Languages
 source_language = en
-target_languages = fr es zh
+target_languages = fr es zh nl
