Update setup.conf to add root_package as ikaaro

--- a/setup.conf
+++ b/setup.conf
@@ -12,6 +12,7 @@ license = "GNU General Public License (GPL)"
 description = "A Content Management System built on Python & itools"
 
 # Packages
+package_root = "ikaaro"
 packages = "blog agenda obsolete"
 
 # Scripts
