Update .gitignore to add de

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,10 @@ ikaaro/environment.json
 *.xml.it
 *.xml.zh
 *.xml.nl
+*.xml.de
 *.xhtml.es
 *.xhtml.fr
 *.xhtml.it
 *.xhtml.zh
 *.xhtml.nl
+*.xhtml.de
