--- a/setup.conf
+++ b/setup.conf
@@ -39,4 +39,4 @@ scripts = "icms-forget.py icms-init.py icms-start.py icms-stop.py
 
 # Languages
 source_language = en
-target_languages = fr es zh nl de
+target_languages = fr es zh nl de ca nl_BE
