Set new version 0.76.2

--- a/setup.conf
+++ b/setup.conf
@@ -33,6 +33,9 @@ classifiers = "
 package_root = "ikaaro"
 packages = "blog agenda obsolete"
 
+# Provides
+provides = "ikaaro(0.76.2)"
+
 # Scripts
 scripts = "icms-forget.py icms-init.py icms-start.py icms-stop.py
   icms-update.py icms-update-catalog.py"
