--- a/circle.yml
+++ b/circle.yml
@@ -36,7 +36,7 @@ dependencies:
     # Pip install
     - pip install --upgrade pip
     # Install dependencies
-    - pip install -r requirements.txt
+    - pip install --upgrade -r requirements.txt
     # Install
     - python setup.py install
 
