--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
 
 test:
   override:
-    - docker run -v /home/ubuntu/ikaaro/:/home/ikaaro/ikaaro hforge/ikaaro python /home/ikaaro/ikaaro/test/test.py --mode junitxml
+    - docker run -v /home/ubuntu/ikaaro/:/home/ikaaro/ikaaro hforge/ikaaro pip install junitxml && python /home/ikaaro/ikaaro/test/test.py --mode junitxml
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit
     - mv /home/ubuntu/junit.xml  $CIRCLE_TEST_REPORTS/junit/junit.xml
