--- a/circle.yml
+++ b/circle.yml
@@ -11,4 +11,4 @@ test:
     - docker run -v /home/ubuntu/ikaaro/test/:/home/ikaaro/test/ hforge/ikaaro sh -c "pip install junitxml && python /home/ikaaro/test/test.py --mode junitxml"
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit
-    - mv /home/ubuntu/junit.xml  $CIRCLE_TEST_REPORTS/junit/junit.xml
+    - mv /home/ubuntu/test/junit.xml  $CIRCLE_TEST_REPORTS/junit/junit.xml
