--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
 
 test:
   override:
-    - docker run -v /home/ubuntu/ikaaro/test/:/home/ikaaro/test/ hforge/ikaaro sh -c "pip install junitxml && python /home/ikaaro/test/test.py --mode junitxml"
+    - docker run -v /home/ubuntu/ikaaro/test/:/home/ikaaro/test/ hforge/ikaaro sh -c "pip install junitxml && cd /home/ikaaro/test/ && python test.py --mode junitxml"
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit
-    - mv /home/ubuntu/test/junit.xml  $CIRCLE_TEST_REPORTS/junit/junit.xml
+    - mv /home/ubuntu/ikaaro/test/junit.xml  $CIRCLE_TEST_REPORTS/junit/junit.xml
