Remove 'obsolete' package

--- a/setup.conf
+++ b/setup.conf
@@ -31,7 +31,7 @@ classifiers = "
 
 # Packages
 package_root = "ikaaro"
-packages = "api blog agenda obsolete"
+packages = "api blog agenda"
 
 # Scripts
 scripts = "icms-forget.py icms-init.py icms-start.py icms-stop.py
