--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
 
 test:
   override:
-    - docker run -v /home/ubuntu/ikaaro/:/home/ikaaro/ hforge/ikaaro sh -c "cd /home/ikaaro/ && python setup.py install && cd /home/ikaaro/test/ && python test.py --mode junitxml"
+    - docker run -v /home/ubuntu/ikaaro/:/home/ikaaro/ hforge/ikaaro sh -c "git clone https://github.com/hforge/itools && cd itools/ && python setup.py install && cd /home/ikaaro/ && python setup.py install && cd /home/ikaaro/test/ && python test.py --mode junitxml"
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit
     - mv /home/ubuntu/ikaaro/test/junit.xml  $CIRCLE_TEST_REPORTS/junit/junit.xml
