Server: Use a WSGI based server (1)

--- a/setup.conf
+++ b/setup.conf
@@ -31,7 +31,7 @@ classifiers = "
 
 # Packages
 package_root = "ikaaro"
-packages = "api emails"
+packages = "api emails web"
 
 # Scripts
 scripts = "icms-forget.py icms-init.py icms-start.py icms-stop.py
